Chat buttons alignment fix

--- a/friends.custom.css
+++ b/friends.custom.css
@@ -514,7 +514,7 @@
 [class*="chatentry_EmbedButton_"] .SVGIcon_Paperclip {
     width: 20px !important;
     height: 20px !important;
-    margin-top: 4px;
+    margin-top: 2px;
     margin-bottom: 2px;
 }
 
